Bug squashed, apparently my JS was accessing the inline styles of the individual pictures instead of the imported styles from my CSS. Going to have to do some reaserch on that one, still not quite sure why it works one way and not the other.

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,6 +5,13 @@
   flex-wrap: wrap;
 }
 
+.pic {
+  height: 300px;
+  width: 300px;
+}
+
+/* these transform properties are inaccesible with my existing js for some reason, going to have to come back to this later and wrap my head around inline styles vs imported CSS */
+
 #tl {
   transform: scaleX(1) scaleY(1);
 }
